--- a/src/layouts/MainStyle.css
+++ b/src/layouts/MainStyle.css
@@ -1,5 +1,5 @@
 :root{
-  --background-light: 'https://images.unsplash.com/photo-1433838552652-f9a46b332c40?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80';
+  
   --background-dark: 'https://images.unsplash.com/photo-1517124686104-3830fbe48de6?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80';
 }
 
@@ -9,13 +9,25 @@
   padding: 0;
 }
 
-body {
-  background: url('https://images.unsplash.com/photo-1433838552652-f9a46b332c40?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80') 
+.backgroundLight{
+  --background: url('https://images.unsplash.com/photo-1433838552652-f9a46b332c40?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80') 
   no-repeat center center fixed;
+}
+.backgroundDark{
+  --background: url('https://images.unsplash.com/photo-1517124686104-3830fbe48de6?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80') 
+  no-repeat center center fixed;
+}
+
+body {
+  --background: url('https://images.unsplash.com/photo-1517124686104-3830fbe48de6?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80') 
+  no-repeat center center fixed;
+  background: var(--background);
   background-size: cover;
   box-sizing: border-box;
   font-family: Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+
 
 .layer {
   height: 100vh;
